# bachelor

./: README.md
CudaAcceleratedRayTracingWithKDTrees/: CMakeLists.txt  CudaAcceleratedRayTracingWithKDTrees.cpp  CudaAcceleratedRayTracingWithKDTrees.h  hit.h  image.cpp  image.h  kdnode.cpp  kdnode.h  light.h  lodepng.cpp  lodepng.h  object.h  objparser.cpp  objparser.h  ray.h  raytracing.cu.cpp  raytracing.h  triangle.cpp  triangle.h  vector.cpp  vector.h
CudaAcceleratedRayTracingWithKDTrees/CudaRaytracing/: CMakeLists.txt  CudaRaytracing.cu  CudaRaytracing.h
